antlr4/quac_parser.go
// Code generated from QuACParser.g4 by ANTLR 4.10.1. DO NOT EDIT.

package antlr4 // QuACParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type QuACParser struct {
	*antlr.BaseParser
}

var quacparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func quacparserParserInit() {
	staticData := &quacparserParserStaticData
	staticData.literalNames = []string{
		"", "", "'['", "']'", "';'", "':'", "','", "'\\n'", "'rz'", "'r0'",
		"'r1'", "'r2'", "'r3'", "'r4'", "'fl'", "'r5'", "'pc'", "'r7'", "",
		"", "", "", "", "", "", "", "", "", "", "'nop'", "", "", "'.word'",
	}
	staticData.symbolicNames = []string{
		"", "IntegerLiteral", "LBRACK", "RBRACK", "SEMI", "COLON", "COMMA",
		"NEWLINE", "RZ", "R0", "R1", "R2", "R3", "R4", "FL", "R5", "PC", "R7",
		"MOV", "MOVL", "SETH", "STR", "LDR", "ADD", "SUB", "AND", "ORR", "JPR",
		"CMP", "NOP", "JPM", "JP", "WORD", "Identifier", "WS", "LINE_COMMENT",
	}
	staticData.ruleNames = []string{
		"parse", "statement", "iFormat", "rMemFormat", "rALUFormat", "nop",
		"pseudo2Param", "jpr", "jpm", "jp", "register",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// QuACParserInit initializes any static state used to implement QuACParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewQuACParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func QuACParserInit() {
	staticData := &quacparserParserStaticData
	staticData.once.Do(quacparserParserInit)
}

// NewQuACParser produces a new parser instance for the optional input antlr.TokenStream.
func NewQuACParser(input antlr.TokenStream) *QuACParser {
	QuACParserInit()
	this := new(QuACParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &quacparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "QuACParser.g4"

	return this
}

// QuACParser tokens.
const (
	QuACParserEOF            = antlr.TokenEOF
	QuACParserIntegerLiteral = 1
	QuACParserLBRACK         = 2
	QuACParserRBRACK         = 3
	QuACParserSEMI           = 4
	QuACParserCOLON          = 5
	QuACParserCOMMA          = 6
	QuACParserNEWLINE        = 7
	QuACParserRZ             = 8
	QuACParserR0             = 9
	QuACParserR1             = 10
	QuACParserR2             = 11
	QuACParserR3             = 12
	QuACParserR4             = 13
	QuACParserFL             = 14
	QuACParserR5             = 15
	QuACParserPC             = 16
	QuACParserR7             = 17
	QuACParserMOV            = 18
	QuACParserMOVL           = 19
	QuACParserSETH           = 20
	QuACParserSTR            = 21
	QuACParserLDR            = 22
	QuACParserADD            = 23
	QuACParserSUB            = 24
	QuACParserAND            = 25
	QuACParserORR            = 26
	QuACParserJPR            = 27
	QuACParserCMP            = 28
	QuACParserNOP            = 29
	QuACParserJPM            = 30
	QuACParserJP             = 31
	QuACParserWORD           = 32
	QuACParserIdentifier     = 33
	QuACParserWS             = 34
	QuACParserLINE_COMMENT   = 35
)

// QuACParser rules.
const (
	QuACParserRULE_parse        = 0
	QuACParserRULE_statement    = 1
	QuACParserRULE_iFormat      = 2
	QuACParserRULE_rMemFormat   = 3
	QuACParserRULE_rALUFormat   = 4
	QuACParserRULE_nop          = 5
	QuACParserRULE_pseudo2Param = 6
	QuACParserRULE_jpr          = 7
	QuACParserRULE_jpm          = 8
	QuACParserRULE_jp           = 9
	QuACParserRULE_register     = 10
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuACParserRULE_parse
	return p
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuACParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(QuACParserEOF, 0)
}

func (s *ParseContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *QuACParser) Parse() (localctx IParseContext) {
	this := p
	_ = this

	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QuACParserRULE_parse)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(25)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-18)&-(0x1f+1)) == 0 && ((1<<uint((_la-18)))&((1<<(QuACParserMOV-18))|(1<<(QuACParserMOVL-18))|(1<<(QuACParserSETH-18))|(1<<(QuACParserSTR-18))|(1<<(QuACParserLDR-18))|(1<<(QuACParserADD-18))|(1<<(QuACParserSUB-18))|(1<<(QuACParserAND-18))|(1<<(QuACParserORR-18))|(1<<(QuACParserJPR-18))|(1<<(QuACParserCMP-18))|(1<<(QuACParserNOP-18))|(1<<(QuACParserJPM-18))|(1<<(QuACParserJP-18))|(1<<(QuACParserWORD-18))|(1<<(QuACParserIdentifier-18)))) != 0 {
		{
			p.SetState(22)
			p.Statement()
		}

		p.SetState(27)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(28)
		p.Match(QuACParserEOF)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuACParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuACParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) CopyFrom(ctx *StatementContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type JpmStatementContext struct {
	*StatementContext
}

func NewJpmStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *JpmStatementContext {
	var p = new(JpmStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *JpmStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JpmStatementContext) Jpm() IJpmContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJpmContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJpmContext)
}

func (s *JpmStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterJpmStatement(s)
	}
}

func (s *JpmStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitJpmStatement(s)
	}
}

type RALUFormatStatementContext struct {
	*StatementContext
}

func NewRALUFormatStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RALUFormatStatementContext {
	var p = new(RALUFormatStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *RALUFormatStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RALUFormatStatementContext) RALUFormat() IRALUFormatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRALUFormatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRALUFormatContext)
}

func (s *RALUFormatStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterRALUFormatStatement(s)
	}
}

func (s *RALUFormatStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitRALUFormatStatement(s)
	}
}

type JpStatementContext struct {
	*StatementContext
}

func NewJpStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *JpStatementContext {
	var p = new(JpStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *JpStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JpStatementContext) Jp() IJpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJpContext)
}

func (s *JpStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterJpStatement(s)
	}
}

func (s *JpStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitJpStatement(s)
	}
}

type Pseudo2ParamStatementContext struct {
	*StatementContext
}

func NewPseudo2ParamStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Pseudo2ParamStatementContext {
	var p = new(Pseudo2ParamStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *Pseudo2ParamStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Pseudo2ParamStatementContext) Pseudo2Param() IPseudo2ParamContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPseudo2ParamContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPseudo2ParamContext)
}

func (s *Pseudo2ParamStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterPseudo2ParamStatement(s)
	}
}

func (s *Pseudo2ParamStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitPseudo2ParamStatement(s)
	}
}

type NopStatementContext struct {
	*StatementContext
}

func NewNopStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NopStatementContext {
	var p = new(NopStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *NopStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NopStatementContext) Nop() INopContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INopContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INopContext)
}

func (s *NopStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterNopStatement(s)
	}
}

func (s *NopStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitNopStatement(s)
	}
}

type JprStatementContext struct {
	*StatementContext
}

func NewJprStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *JprStatementContext {
	var p = new(JprStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *JprStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JprStatementContext) Jpr() IJprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJprContext)
}

func (s *JprStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterJprStatement(s)
	}
}

func (s *JprStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitJprStatement(s)
	}
}

type WordStatementContext struct {
	*StatementContext
}

func NewWordStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WordStatementContext {
	var p = new(WordStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *WordStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WordStatementContext) WORD() antlr.TerminalNode {
	return s.GetToken(QuACParserWORD, 0)
}

func (s *WordStatementContext) IntegerLiteral() antlr.TerminalNode {
	return s.GetToken(QuACParserIntegerLiteral, 0)
}

func (s *WordStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterWordStatement(s)
	}
}

func (s *WordStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitWordStatement(s)
	}
}

type RMemFormatStatementContext struct {
	*StatementContext
}

func NewRMemFormatStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RMemFormatStatementContext {
	var p = new(RMemFormatStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *RMemFormatStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RMemFormatStatementContext) RMemFormat() IRMemFormatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRMemFormatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRMemFormatContext)
}

func (s *RMemFormatStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterRMemFormatStatement(s)
	}
}

func (s *RMemFormatStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitRMemFormatStatement(s)
	}
}

type LabelStatementContext struct {
	*StatementContext
}

func NewLabelStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LabelStatementContext {
	var p = new(LabelStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *LabelStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LabelStatementContext) Identifier() antlr.TerminalNode {
	return s.GetToken(QuACParserIdentifier, 0)
}

func (s *LabelStatementContext) COLON() antlr.TerminalNode {
	return s.GetToken(QuACParserCOLON, 0)
}

func (s *LabelStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterLabelStatement(s)
	}
}

func (s *LabelStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitLabelStatement(s)
	}
}

type IFormatStatementContext struct {
	*StatementContext
}

func NewIFormatStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IFormatStatementContext {
	var p = new(IFormatStatementContext)

	p.StatementContext = NewEmptyStatementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StatementContext))

	return p
}

func (s *IFormatStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IFormatStatementContext) IFormat() IIFormatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIFormatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIFormatContext)
}

func (s *IFormatStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterIFormatStatement(s)
	}
}

func (s *IFormatStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitIFormatStatement(s)
	}
}

func (p *QuACParser) Statement() (localctx IStatementContext) {
	this := p
	_ = this

	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QuACParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(42)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case QuACParserMOVL, QuACParserSETH:
		localctx = NewIFormatStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(30)
			p.IFormat()
		}

	case QuACParserSTR, QuACParserLDR:
		localctx = NewRMemFormatStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(31)
			p.RMemFormat()
		}

	case QuACParserADD, QuACParserSUB, QuACParserAND, QuACParserORR:
		localctx = NewRALUFormatStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(32)
			p.RALUFormat()
		}

	case QuACParserNOP:
		localctx = NewNopStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(33)
			p.Nop()
		}

	case QuACParserMOV, QuACParserCMP:
		localctx = NewPseudo2ParamStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(34)
			p.Pseudo2Param()
		}

	case QuACParserJPR:
		localctx = NewJprStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(35)
			p.Jpr()
		}

	case QuACParserJPM:
		localctx = NewJpmStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(36)
			p.Jpm()
		}

	case QuACParserJP:
		localctx = NewJpStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(37)
			p.Jp()
		}

	case QuACParserWORD:
		localctx = NewWordStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(38)
			p.Match(QuACParserWORD)
		}
		{
			p.SetState(39)
			p.Match(QuACParserIntegerLiteral)
		}

	case QuACParserIdentifier:
		localctx = NewLabelStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(40)
			p.Match(QuACParserIdentifier)
		}
		{
			p.SetState(41)
			p.Match(QuACParserCOLON)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IIFormatContext is an interface to support dynamic dispatch.
type IIFormatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIFormatContext differentiates from other interfaces.
	IsIFormatContext()
}

type IFormatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIFormatContext() *IFormatContext {
	var p = new(IFormatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuACParserRULE_iFormat
	return p
}

func (*IFormatContext) IsIFormatContext() {}

func NewIFormatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IFormatContext {
	var p = new(IFormatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuACParserRULE_iFormat

	return p
}

func (s *IFormatContext) GetParser() antlr.Parser { return s.parser }

func (s *IFormatContext) Register() IRegisterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterContext)
}

func (s *IFormatContext) COMMA() antlr.TerminalNode {
	return s.GetToken(QuACParserCOMMA, 0)
}

func (s *IFormatContext) IntegerLiteral() antlr.TerminalNode {
	return s.GetToken(QuACParserIntegerLiteral, 0)
}

func (s *IFormatContext) MOVL() antlr.TerminalNode {
	return s.GetToken(QuACParserMOVL, 0)
}

func (s *IFormatContext) SETH() antlr.TerminalNode {
	return s.GetToken(QuACParserSETH, 0)
}

func (s *IFormatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IFormatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IFormatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterIFormat(s)
	}
}

func (s *IFormatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitIFormat(s)
	}
}

func (p *QuACParser) IFormat() (localctx IIFormatContext) {
	this := p
	_ = this

	localctx = NewIFormatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QuACParserRULE_iFormat)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		_la = p.GetTokenStream().LA(1)

		if !(_la == QuACParserMOVL || _la == QuACParserSETH) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(45)
		p.Register()
	}
	{
		p.SetState(46)
		p.Match(QuACParserCOMMA)
	}
	{
		p.SetState(47)
		p.Match(QuACParserIntegerLiteral)
	}

	return localctx
}

// IRMemFormatContext is an interface to support dynamic dispatch.
type IRMemFormatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRMemFormatContext differentiates from other interfaces.
	IsRMemFormatContext()
}

type RMemFormatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRMemFormatContext() *RMemFormatContext {
	var p = new(RMemFormatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuACParserRULE_rMemFormat
	return p
}

func (*RMemFormatContext) IsRMemFormatContext() {}

func NewRMemFormatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RMemFormatContext {
	var p = new(RMemFormatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuACParserRULE_rMemFormat

	return p
}

func (s *RMemFormatContext) GetParser() antlr.Parser { return s.parser }

func (s *RMemFormatContext) AllRegister() []IRegisterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegisterContext); ok {
			len++
		}
	}

	tst := make([]IRegisterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegisterContext); ok {
			tst[i] = t.(IRegisterContext)
			i++
		}
	}

	return tst
}

func (s *RMemFormatContext) Register(i int) IRegisterContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterContext)
}

func (s *RMemFormatContext) COMMA() antlr.TerminalNode {
	return s.GetToken(QuACParserCOMMA, 0)
}

func (s *RMemFormatContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(QuACParserLBRACK, 0)
}

func (s *RMemFormatContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(QuACParserRBRACK, 0)
}

func (s *RMemFormatContext) STR() antlr.TerminalNode {
	return s.GetToken(QuACParserSTR, 0)
}

func (s *RMemFormatContext) LDR() antlr.TerminalNode {
	return s.GetToken(QuACParserLDR, 0)
}

func (s *RMemFormatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RMemFormatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RMemFormatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.EnterRMemFormat(s)
	}
}

func (s *RMemFormatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuACParserListener); ok {
		listenerT.ExitRMemFormat(s)
	}
}

func (p *QuACParser) RMemFormat() (localctx IRMemFormatContext) {
	this := p
	_ = this

	localctx = NewRMemFormatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QuACParserRULE_rMemFormat)
	var _la int
